Switched from sockets to streams to allow SSL connections

--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@
 ; The bot's realname
 ;realname = 'foobot'
 
-; The server we're connecting to
+; The server we're connecting to, prefix with ssl:// for secure connections
 server = ''
 
 ; Port of the server
