Added support for channel keys

--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,8 @@ server = ''
 ;network = ''
 
 ; Comma-separated list of channels to join
-
+; If the channel requires a key, you can use the following format:
+; '#channel1 key, #channel2'
 channels = ''
 
 ; Authtentication settings
