dcc: first code

--- a/config.ini
+++ b/config.ini
@@ -43,8 +43,11 @@ channels = ''
 ; Debug channel
 ;debug_channel = '#foobot2-debug'
 
-; External access via UNIX domain socket
-;control_socket = ''
+; IP address to listen on (important for DCC)
+;listen_addr = ''
+
+; Port for DCC connections
+;dcc_port = 3333
 
 ; Main channel
 ;main_channel = ''
