settings: implemented plugin_blacklist

--- a/config.ini
+++ b/config.ini
@@ -51,3 +51,6 @@ channels = ''
 
 ; Main channel
 ;main_channel = ''
+
+; Prevent the autoloading of some plugins (comma-separated)
+; plugin_blacklist = ''
