--- a/config.ini
+++ b/config.ini
@@ -54,3 +54,6 @@ channels = ''
 
 ; Prevent the autoloading of some plugins (comma-separated)
 ; plugin_blacklist = ''
+
+; Default timezone
+; timezone = 'UTC'
